syntax = "proto3";
package rarimo.rarimocore.rarimocore;

option go_package = "github.com/rarimo/rarimo-core/x/rarimocore/types";

import "tokenmanager/item.proto";
import "gogoproto/gogo.proto";

message Transfer {
  // hex-encoded keccak256 hash for tx||event||chain strings' bytes
  string origin = 1;

  // Deposit transaction data
  string tx = 2;
  string eventId = 3;
  string sender = 4;

  // hex-encoded
  string receiver = 5;
  // dec-encoded
  string amount = 6;

  // hex-encoded
  string bundleData = 7;
  // hex-encoded
  string bundleSalt = 8;

  // Information about current and target chains
  rarimo.rarimocore.tokenmanager.OnChainItemIndex from = 9 [(gogoproto.nullable) = false];
  rarimo.rarimocore.tokenmanager.OnChainItemIndex to = 10 [(gogoproto.nullable) = false];
  // Information about token
  rarimo.rarimocore.tokenmanager.ItemMetadata meta = 11; // Optional (if item currently does not exists
}

